   listings.
2. Add server-side option to show composer, and not artist, for composer
   genres in MAI.
3. In desktop layout with un-pinned queue add a show/hide queue button in
   bottom bar (if queue contains more than 1 track).
4. For track style queue, show ratings on right underneath track time.
5. Re-add zooming to MAI view.

4.3.4
-----
1. Try not to crop radio station logos in favourites.
2. Fix missing icons from 'Extras' plugins if Material is set as default skin.
3. Tweak queue toolbar layout.

4.3.3
-----
1. When showing now-playing context menu reset favIcon and favUrl so that these
   are updated with current track.
2. Only show ratings actions if configured to show ratings.
3. Fix requesting extid (for emblems) and ratings in browse commands.
4. Tweak Tidal emblem.
5. Fix duplicated tech info in browse view when also showing ratings.
6. Update translations.
7. Fix listing all drive selectors in file/folder dialog for Windows.

4.3.2
-----
1. Revert back to '1' for enabled bool server side items.
2. If jumplist only contains headers (e.g. as in 'New Music') then show if
   there are at least 5 times the number of items as there are jumplist
   entries.
3. Fix queue backdrop if desktop layout, pinned, and not using background
   images.
4. Trap contextmenu event in longpress handler, as opposed to using an empty
   handler.
5. Fix erroneously splitting of genre string.
6. Fix 'Live'/'Bootleg' release type option.
7. Only group all releases by type if LMS's 'groupArtistAlbumsByReleaseType'
   setting is set to 2
8. Add icon for ZenRadio.
9. Add 'tidal' and 'pyrrha' to emblems/track-sources.

4.3.1
-----
1. Fix view height issues when rotating.
2. Fix closing of 'Add to playlist' dialog.

4.3.0
-----
 1. Add option to move dialogs closer to click/touch position.
 2. If using unpinned queue without background image then have a
    semi-transparent background that blurs items below.
 3. Remove MySqueezebox.com related code, as service is shutdown.